--- a/sass/Layout/_menu.scss
+++ b/sass/Layout/_menu.scss
@@ -157,14 +157,11 @@ main img {
 
     p,
     h3 {
-        max-width: 290px;
+        margin-right: 5px;
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
 
-        @include desktop {
-            max-width: 500px;
-        }
     }
 
     &:hover {
@@ -183,7 +180,7 @@ main img {
 
         p,
         h3 {
-            max-width: 200px;
+            margin-right: 5px;
             overflow: hidden;
             white-space: nowrap;
             text-overflow: ellipsis;
